force-app/main/default/objects/imobile_store_sales__c/imobile_store_sales__c.object-meta.xml
<CustomObject>
    <label>imobile store sale</label>
    <nameField>
        <label>PIVOT TABLE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>imobile store sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>