force-app/main/default/objects/imobile_store_sales__c/fields/PLACE__c.field-meta.xml
<CustomField>
    <fullName>PLACE__c</fullName>
    <label>PLACE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>