force-app/main/default/objects/imobile_store_sales__c/fields/PRODUCT__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT__c</fullName>
    <label>PRODUCT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>