force-app/main/default/objects/imobile_store_sales__c/fields/VALUE__c.field-meta.xml
<CustomField>
    <fullName>VALUE__c</fullName>
    <label>VALUE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>