force-app/main/default/objects/imobile_store_sales__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DATE__c</columns>
    <columns>NAME__c</columns>
    <columns>PLACE__c</columns>
    <columns>PRODUCT__c</columns>
    <columns>VALUE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>